--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/cli": "^4.0.9",
     "@tailwindcss/vite": "^4.0.9",
     "firebase": "^11.4.0",
     "pinia": "^3.0.1",
